[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/UI/Memo.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/Components/AuxiliaryBottomButtonMargin.tscn" type="PackedScene" id=2]
[ext_resource path="res://Themes/MainMenu_Overlay.tres" type="Theme" id=3]
[ext_resource path="res://Assets/JournalEntries/Page1.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Texture Buttons/Next-Memo-Button.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Texture Buttons/Next-Memo-Button-Pressed.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Texture Buttons/Play-Button-Pressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/Texture Buttons/Play-Button.png" type="Texture" id=8]

[node name="Memo" type="CanvasLayer"]
unique_name_in_owner = true
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.758
margin_left = 35.0
margin_right = -35.0
margin_bottom = -10.0
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 954.0
margin_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_right = 954.0
margin_bottom = 65.0
bbcode_enabled = true
bbcode_text = "[center][b]M[/b]emo[/center]"
text = "Memo"
fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 55.0
margin_top = 88.0
margin_right = 899.0
margin_bottom = 424.0
size_flags_horizontal = 4
size_flags_vertical = 6
custom_constants/separation = 19
alignment = 1

[node name="PreviousMarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 118.0
margin_bottom = 336.0
rect_min_size = Vector2( 118, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PreviousJournalPage" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/PreviousMarginContainer"]
unique_name_in_owner = true
margin_left = 18.0
margin_top = 100.0
margin_right = 99.0
margin_bottom = 236.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
stretch_mode = 3
flip_h = true

[node name="JournalPage" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 137.0
margin_right = 707.0
margin_bottom = 336.0
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource( 4 )
stretch_mode = 4

[node name="NextMarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 726.0
margin_right = 844.0
margin_bottom = 336.0
rect_min_size = Vector2( 118, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NextJournalPage" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/NextMarginContainer"]
unique_name_in_owner = true
margin_left = 18.0
margin_top = 100.0
margin_right = 99.0
margin_bottom = 236.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
stretch_mode = 3

[node name="BottomButtonMargin" parent="." instance=ExtResource( 2 )]
Continue = false

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 883.0
margin_top = 24.0
margin_right = 983.0
margin_bottom = 124.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PreviousMarginContainer/PreviousJournalPage" to="." method="_on_PreviousPage_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NextMarginContainer/NextJournalPage" to="." method="_on_NextPage_pressed"]
[connection signal="Back" from="BottomButtonMargin" to="." method="_on_BottomButtonMargin_Back"]
[connection signal="pressed" from="PlayButton" to="." method="_on_TextureButton_pressed"]
